--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: AGP Test
-description: Sto tostando questa cosa
+title: AlfyGamePLAY
+description: Nèèèè
 theme: just-the-docs
 color_scheme: dark
 search.rel_url: false
 
-url: https://alfygame.github.io/agptest/
+url: https://alfygame.github.io/
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
